--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body class="bg-surface-50 dark:bg-surface-950 min-h-screen">
         <div id="app"></div>
-        <script type="module" src="/src/main.js"></script>
+        <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
